# sub2api-helper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_main.py
